@@ -7,38 +7,38 @@ use Tags::Utils::Preserve;
 
 # Begin element helper.
 sub begin_helper {
-        my ($pr, $tag) = @_;
-        print "TAG: $tag ";
-        my ($pre, $pre_pre) = $pr->begin($tag);
+        my ($pr, $element) = @_;
+        print "ELEMENT: $element ";
+        my ($pre, $pre_pre) = $pr->begin($element);
         print "PRESERVED: $pre PREVIOUS PRESERVED: $pre_pre\n";
 }
 
 # End element helper.
 sub end_helper {
-        my ($pr, $tag) = @_;
-        print "ENDTAG: $tag ";
-        my ($pre, $pre_pre) = $pr->end($tag);
+        my ($pr, $element) = @_;
+        print "ENDELEMENT: $element ";
+        my ($pre, $pre_pre) = $pr->end($element);
         print "PRESERVED: $pre PREVIOUS PRESERVED: $pre_pre\n";
 
 }
 
 # Object.
 my $pr = Tags::Utils::Preserve->new(
-        'preserved' => ['tag']
+        'preserved' => ['element']
 );
 
 # Process.
 begin_helper($pr, 'foo');
-begin_helper($pr, 'tag');
+begin_helper($pr, 'element');
 begin_helper($pr, 'foo');
 end_helper($pr, 'foo');
-end_helper($pr, 'tag');
+end_helper($pr, 'element');
 end_helper($pr, 'foo');
 
 # Output:
-# TAG: foo PRESERVED: 0 PREVIOUS PRESERVED: 0
-# TAG: tag PRESERVED: 1 PREVIOUS PRESERVED: 0
-# TAG: foo PRESERVED: 1 PREVIOUS PRESERVED: 1
-# ENDTAG: foo PRESERVED: 1 PREVIOUS PRESERVED: 1
-# ENDTAG: tag PRESERVED: 0 PREVIOUS PRESERVED: 1
-# ENDTAG: foo PRESERVED: 0 PREVIOUS PRESERVED: 0
+# ELEMENT: foo PRESERVED: 0 PREVIOUS PRESERVED: 0
+# ELEMENT: element PRESERVED: 1 PREVIOUS PRESERVED: 0
+# ELEMENT: foo PRESERVED: 1 PREVIOUS PRESERVED: 1
+# ENDELEMENT: foo PRESERVED: 1 PREVIOUS PRESERVED: 1
+# ENDELEMENT: element PRESERVED: 0 PREVIOUS PRESERVED: 1
+# ENDELEMENT: foo PRESERVED: 0 PREVIOUS PRESERVED: 0
