@@ -1,6 +1,7 @@
 0.16
  [Tags::Utils::Preserve]
  - Fix typo in doc.
+ - Rewrite $tag variable and comments to $element.
  - Rewrite doc to use of =head2.
 
 0.15 2024-04-08T22:56:02+02:00
